--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.36",
+    "bcrypt": "^1.0.3",
+    "graceful-fs": "^4.1.11",
+    "history": "^4.7.2",
     "meteor-node-stubs": "^0.3.2",
+    "node-gyp": "^3.6.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   }
 }
